@@ -1,5 +1,8 @@
 Changes with Apache 2.0.37
 
+  *) Make 2.0's "AcceptMutex" startup message now "completely"
+     match how 1.3 does it. [Jim Jagielski]
+
   *) Implement a fixed size memory cache using a priority queue
      [Ian Holsman]
 
